--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,96 @@
 :root {
     --square-size: 36px;
-    --inner-square-size: 30px;
+    --inner-border: 2px;
+    --inner-square-size: calc(var(--square-size) - 2 * (var(--inner-border) + 2px));
     --col-height: 180px;
+
+    --sidebar-width: 300px;
 }
 
 body {
     font-family: 'Mukta Mahee', sans-serif;
 }
 
-.timeline {
-    vertical-align: top;
+/* globalish */
+.center-span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
 }
+
+/* sidebar */
+
+.sidebar {
+    width: var(--sidebar-width);
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: inline-block;
+    background-color: #333;
+}
+
+.sidebar-header {
+    padding-left: 15px;
+    height: 45px;
+    line-height: 45px;
+    background-color: #111;
+    color: #fff;
+}
+
+.sidebar-row {
+    padding-left: 15px;
+    height: 30px;
+    line-height: 30px;
+    color: #fff;
+}
+
+.sidebar-dark {
+    background-color: #333;
+}
+
+.sidebar-dark:hover {
+    background-color: #444;
+}
+
+.sidebar-light {
+    background-color: #555;   
+}
+
+.sidebar-light:hover {
+    background-color: #666;
+}
+
+.sidebar-row-framedata {
+    width: 30px;
+    display: inline-block;
+    text-align: center;
+}
+
+.startup {
+    background-color: #ffd70f;
+    color: #000;
+}
+
+.active {
+    background-color: #ff6a00;
+    color: #000;
+}
+
+.recovery {
+    background-color: #9b044b;
+    color: #fff;
+}
+
+/* big divs */
+
+.timeline {
+    margin-left: var(--sidebar-width);
+    padding: 100px;
+    display: inline-block;
+}
+
+/* Columns and rows */
 
 .header-col {
     height: var(--col-height);
@@ -48,12 +128,12 @@ body {
     line-height: var(--square-size);
     display: block;
     text-align: center;
+    overflow: visible;
 }
 
-.frame-row span {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
+.frame-row svg {
+    position: relative;
+    left: calc(var(--square-size) / -2);
 }
 
 .frame-indicator {
@@ -63,5 +143,27 @@ body {
     width: var(--inner-square-size);
     height: var(--inner-square-size);
     border-style: solid;
-    border-width: 1px;
+    border-width: var(--inner-border);
+    border-color: #111;
+    border-radius: 4px;
+}
+
+/* Tooltip stuff */
+
+.frame-indicator:hover .frame-tooltip {
+    visibility: visible;
+}
+
+.frame-tooltip {
+    margin-left: -60px;
+    visibility: hidden;
+    width: 120px;
+    background-color: #111;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0px;
+    border-radius: 6px;
+
+    position: absolute;
+    z-index: 1;
 }
