--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,16 @@ body {
     line-height: normal;
 }
 
+.unselectable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
 /* sidebar */
 
 .sidebar {
@@ -114,6 +124,7 @@ body {
 .frame-col {
     width: var(--square-size);
     height: var(--col-height);
+    margin: 10px 0px;
     display: inline-block;
     vertical-align: top;
     background-color: #fff;
@@ -158,12 +169,22 @@ body {
     margin-left: -60px;
     visibility: hidden;
     width: 120px;
+    height: 30px;
     background-color: #111;
     color: #fff;
     text-align: center;
-    padding: 5px 0px;
     border-radius: 6px;
-
     position: absolute;
     z-index: 1;
+}
+
+/* Action indicator */
+
+.action-indicator {
+    border-radius: 8px;
+    background-color: #5d1;
+}
+
+.action-indicator:hover {
+    background-color: #d51;
 }
