drag and drop interface for adding moves

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ body {
     width: var(--square-size);
     height: var(--col-height);
     margin: 10px 0px;
+    border-radius: 8px;
     display: inline-block;
     vertical-align: top;
     background-color: #fff;
@@ -178,13 +179,14 @@ body {
     z-index: 1;
 }
 
-/* Action indicator */
-
 .action-indicator {
-    border-radius: 8px;
-    background-color: #5d1;
-}
-
-.action-indicator:hover {
-    background-color: #d51;
+    position: relative;
+    left: 2px;
+    top: 2px;
+    width: var(--inner-square-size);
+    height: var(--inner-square-size);
+    border-style: dashed;
+    border-radius: 4px;
+    border-width: var(--inner-border);
+    border-color: #aaa;
 }
