--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ body {
     border-width: var(--inner-border);
     border-color: #111;
     border-radius: 4px;
+    transition: background-color 0.5s;
 }
 
 /* Tooltip stuff */
