--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
     width: var(--sidebar-width);
     height: 100%;
     position: fixed;
+    overflow-y: scroll;
     left: 0;
     top: 0;
     display: inline-block;
@@ -92,7 +93,7 @@ body {
     color: #fff;
 }
 
-/* big divs */
+/* timeline */
 
 .timeline {
     margin-left: var(--sidebar-width);
