--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -1,6 +1,6 @@
-.fade-enter-active, .fade-leave-active {
+.timeline-item {
     transition: opacity 0.5s;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+.timeline-enter, .timeline-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
 }
