Add style change when selecting a sidebar move

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -84,6 +84,11 @@ body {
     color: #fff;
 }
 
+.sidebar-selected {
+    background-color: #fff !important;
+    color: #111 !important;
+}
+
 .sidebar-dark {
     background-color: #333;
 }
