Condensed list of global actions; stand and crouch now only change stance, while block, IB, FD only change action

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,6 +41,13 @@ body {
     cursor: default;
 }
 
+/* header */
+.page-header {
+    width: 100%;
+    height: 46px;
+    background-color: #eee;
+}
+
 /* sidebar */
 
 .sidebar {
