Add different background colors for crouching and airborne stances

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -212,6 +212,11 @@ body {
 
 /* Tooltip stuff */
 
+.frame-indicator-background {
+    width: var(--square-size);
+    height: var(--square-size);
+}
+
 .frame-indicator:hover .frame-tooltip {
     visibility: visible;
 }
